--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Bootcamp Quiz | Ricochet227</title>
 </head>
 <body>
-
+    
     <div class="quiz-container" id="quiz">
         <div class="quiz-header">
+            <h1 class="time" style="text-align:center;"></h1>
+            <div id="main"></div>
             <h2 id="question">Question Text</h2>
             <ul>
                 <li>
