Added Start fixed Timer
Added a start page that starts the time when start button is pressed and added a timer that subtracts time when answered incorrectly

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     
     <div class="quiz-container" id="quiz">
+        <section class="startpg" id="startpg">
+            <h1 class="welcome">Welcome to Skylers quiz!</h1>
+            <button class="startbtn" id="start">Start</button>            
+        </section>
         <div class="quiz-header">
             <h1 class="time" style="text-align:center;"></h1>
             <div id="main"></div>
@@ -35,8 +39,9 @@
                 </li>
                 
             </ul>
-        </div>
-        <button id="submit">Submit</button>
+                <button id="submit">Submit</button>
+            </div>
+
     </div>
 
     <script src="script.js"></script>
